pixel perfect layout

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -7,10 +7,10 @@
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="./images/sprite.svg#icon-security">
                 </svg>
-                Гарантии - 12 месяцев
+                Гарантии&nbsp;&mdash; 12&nbsp;месяцев
             </label>
             <div class="advantages__content">
-                <h3 class="advantages__subtitle">Гарантии - 12 месяцев</h3>
+                <h3 class="advantages__subtitle">Гарантии&nbsp;&mdash; 12&nbsp;месяцев</h3>
                 <ul class="advantages__list">
                     <li class="advantages__descr">Работа по договору. Все официально. Предоставляем весь пакет бухгалтерских
                         документов
@@ -34,10 +34,10 @@
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="./images/sprite.svg#icon-pay">
                 </svg>
-                Предоплата - 25%
+                Предоплата&nbsp;&mdash; 25%
             </label>
             <div class="advantages__content">
-                <h3 class="advantages__subtitle">Предоплата - 25%</h3>
+                <h3 class="advantages__subtitle">Предоплата&nbsp;&mdash; 25%</h3>
                 <p class="advantages__descr">Работа по договору. Все официально. Предоставляем весь пакет бухгалтерских
                     документов.
                     2 концепции дизайна. Выполняем работы строго в соответствии с календарным планом
