--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,7 @@
         <div class="hero__swiper swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="hero__picture">
+                    <div class="hero__picture hero__picture_1">
                         <div class="hero__name">
                             <p class="hero__person">Михаил Сунцов</p>
                             <p class="hero__person hero__person_post">Директор</p>
@@ -22,10 +22,10 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="hero__picture">
+                    <div class="hero__picture hero__picture_2">
                         <div class="hero__name">
-                            <p class="hero__person">Михаил Сунцов</p>
-                            <p class="hero__person hero__person_post">Директор</p>
+                            <p class="hero__person">Name</p>
+                            <p class="hero__person hero__person_post">Post</p>
                         </div>
                     </div>
                 </div>
