--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -5,7 +5,7 @@
             <a href="https://www.google.com/partners/agency?id=2851488653" target="_blank" class="partners__link">
                 <img class="partners__img" src="./images/svg/partner-1.svg" alt="Google партнер">
             </a>
-            <img class="partners__img" src="./images/svg/partner-2.svg" alt="Партнер PRO">
+            <img class="partners__img partners__img_last" src="./images/svg/partner-2.svg" alt="Партнер PRO">
         </div>
     </div>
 </section>
