--- a/src/partials/prices.html
+++ b/src/partials/prices.html
@@ -64,24 +64,22 @@
                     <tr class="prices__tr">
                         <td class="prices__td">Аналитика/цели</td>
                         <td class="prices__td">
-                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
-                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
-                            <!-- <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="./images/sprite.svg#ya-metrica">
-                            </svg>
-                            <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="./images/sprite.svg#google-analytica">
-                            </svg> -->
+                            <div class="prices__td-flex">
+                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
+                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                            </div>                           
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
-                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                            <div class="prices__td-flex">
+                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
+                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                            </div>                           
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
-                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                            <div class="prices__td-flex">
+                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
+                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                            </div>                           
                         </td>
                     </tr>
                     <tr class="prices__tr">
